--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Button Design</title>
+    <title>AYAB web tool</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/avrgirl-arduino@5.0.1/dist/avrgirl-arduino.global.js"></script>
     <script type="module" src="script.js"></script>
