--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="title">AYAB web tool</h1>
         <p class="subtitle">Flash AYAB firmwares to test them!</p>
 
-        <nav class="panel" id="firmwares" style="width:35em">
+        <nav class="panel" id="firmwares">
             <p class="panel-heading" >Pick a PR to flash its firmware</p>
             <p class="panel-block is-flex-direction-column">
                 Retrieving firmware list, please wait…
