add link to ayab-knitting.com

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="section has-text-weight-bold">
       <div class="container">
         <h1 class="title">AYAB web tool</h1>
-        <p class="subtitle">Flash AYAB firmwares to test them!</p>
+        <p class="subtitle">Flash <a href="https://ayab-knitting.com">AYAB</a> firmwares to test them!</p>
 
         <nav class="panel" id="firmwares">
             <p class="panel-heading" >Pick a PR to flash its firmware</p>
