--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
           fill="currentColor"
           class="octo-body"
-        /></svg></a>
+        /></svg
+    ></a>
     <section class="section has-text-weight-bold">
       <div class="container">
         <h1 class="title">AYAB web tool</h1>
@@ -55,16 +56,39 @@
           </p>
         </nav>
 
-        <button class="button is-primary" disabled id="uploadBtn">
+        <article
+          class="message is-danger"
+          id="webserial-warning"
+          style="display: none"
+        >
+          <div class="message-header">
+            <p>Unsupported browser: cannot flash firmware</p>
+          </div>
+          <div class="message-body">
+            Darn, it looks like your browser does not support the WebSerial API.
+            <br />
+            Please try again with Google Chrome or Microsoft Edge.
+            <br />
+            You can still download the firmware to flash it with another tool.
+          </div>
+        </article>
+
+        <button class="button is-primary is-large" disabled id="uploadBtn">
           Flash selected firmware to Arduino
         </button>
+
         <progress
           id="progress-bar"
           class="progress is-large is-primary"
           max="100"
           value="0"
+          style="display: none"
         ></progress>
-        <div id="result"></div>
+        <div id="result" style="display: none"></div>
+
+        <a class="button is-link is-small" disabled id="downloadBtn">
+          Download selected firmware
+        </a>
       </div>
     </section>
   </body>
